# PyCharmSetup

./: README.md  setup.cfg  setup.py
pycharmsetup/: cli.py  exclusions.py  options.py  run_configurations.py
