[metadata]
author = Matthieu Gallet
author_email = github@19pouces.net
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = Keep PyCharm configuration into the setup.cfg file
license = CeCILL-B
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Matthieu Gallet
maintainer_email = github@19pouces.net
name = pycharmsetup
url = https://github.com/d9pouces/PyCharmSetup
version = attr: pycharmsetup.__version__

[options]
include_package_data = True
packages = find:
tests_require =
    hypothesis
    tox
zip_safe = True

[options.entry_points]
console_scripts =
    pycharm-setup = pycharmsetup.cli:main
